--- a/02-MovieFight/index.html
+++ b/02-MovieFight/index.html
@@ -28,6 +28,7 @@
     <div class="container">
       <input type="text"/>
     </div>
+    <div class="content"></div>
     <script src="utils.js"></script>
     <script src="index.js"></script>
   </body>
