--- a/02-MovieFight/index.html
+++ b/02-MovieFight/index.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <section class="hero is-primary is-bold">
-      <div class="hero-body">
-        <div class="container">
-          <h1 class="title">
-            Movie Fight
-            <span class="icon">
-              <i class="fas fa-film"></i>
-            </span>
-          </h1>
+
+<head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <section class="hero is-primary is-bold">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          Movie Fight
+          <span class="icon">
+            <i class="fas fa-film"></i>
+          </span>
+        </h1>
+      </div>
+    </div>
+  </section>
+  <div class="container">
+    <div class="dropdown is-active">
+      <input type="text" />
+      <div class="dropdown-menu">
+        <div class="dropdown-contemt">
+          <a class="dropdown-item">movie1</a>
+          <a class="dropdown-item">movie2</a>
+          <a class="dropdown-item">movie3</a>
         </div>
       </div>
-    </section>
-    <div class="container">
-      <input type="text"/>
+
     </div>
-    <div class="content"></div>
-    <script src="utils.js"></script>
-    <script src="index.js"></script>
-  </body>
+  </div>
+  <div class="content"></div>
+  <script src="utils.js"></script>
+  <script src="index.js"></script>
+</body>
+
 </html>
