Handling Broken Images

--- a/02-MovieFight/index.html
+++ b/02-MovieFight/index.html
@@ -22,7 +22,8 @@
     </div>
   </section>
   <div class="container">
-    <div class="dropdown is-active">
+    <p>search for a movie</p>
+    <!-- <div class="dropdown is-active">
       <input type="text" />
       <div class="dropdown-menu">
         <div class="dropdown-contemt">
@@ -32,7 +33,9 @@
         </div>
       </div>
     </div>
-    <div class="content"></div>
+    <div class="content"></div> -->
+  <!-- refactoring structure -->
+  <div class="autocompelete"></div>
   </div>
   <script src="utils.js"></script>
   <script src="index.js"></script>
