Rendering Movie Summary

--- a/02-MovieFight/index.html
+++ b/02-MovieFight/index.html
@@ -22,6 +22,9 @@
     </div>
   </section>
   <div class="container">
+      <div class="autocompelete"></div>
+      <div id="summary"></div>
+  </div>
     <!-- <div class="dropdown is-active">
       <input type="text" />
       <div class="dropdown-menu">
@@ -34,8 +37,6 @@
     </div>
     <div class="content"></div> -->
   <!-- refactoring structure -->
-  <div class="autocompelete"></div>
-  </div>
   <script src="utils.js"></script>
   <script src="index.js"></script>
 </body>
