Displaying Multiple Autocompletes

--- a/02-MovieFight/aOK/index.html
+++ b/02-MovieFight/aOK/index.html
@@ -23,12 +23,21 @@
   </section>
   <div class="container">
       <div class="autocompelete"></div>
-      <div class="autocompelete-2"></div>
-      <div class="autocompelete-3"></div>
       <div id="summary"></div>
   </div>
+    <!-- <div class="dropdown is-active">
+      <input type="text" />
+      <div class="dropdown-menu">
+        <div class="dropdown-contemt">
+          <a class="dropdown-item">movie1</a>
+          <a class="dropdown-item">movie2</a>
+          <a class="dropdown-item">movie3</a>
+        </div>
+      </div>
+    </div>
+    <div class="content"></div> -->
+  <!-- refactoring structure -->
   <script src="utils.js"></script>
-  <script src="autocomplete.js"></script>
   <script src="index.js"></script>
 </body>
 
