--- a/02-MovieFight/index.html
+++ b/02-MovieFight/index.html
@@ -22,10 +22,20 @@
     </div>
   </section>
   <div class="container">
-      <div class="autocompelete"></div>
-      <div class="autocompelete-2"></div>
-      <div class="autocompelete-3"></div>
-      <div id="summary"></div>
+      <div class="columns">
+        <div class="column">
+          <div id="left-autocomplete"></div>
+          <div id="left-summary"></div>
+        </div>
+        <div class="column">
+          <div id="right-autocomplete"></div>
+          <div id="right-summary"></div>
+        </div>
+      </div>
+      <div class="column is-half notification is-primary tutorial">
+        <h1 class="title"> Search For a movie on Both Sides</h1>
+        <p class="subtitle"> we will tell you which is best!</p>
+      </div>
   </div>
   <script src="utils.js"></script>
   <script src="autocomplete.js"></script>
